# lilypond

./: .clang-format  .cvsignore  .dir-locals.el  .dstreamrc  .gitattributes  .gitignore  .gitlab-ci.lilypond.yml  .gitlab-ci.yml  .mailmap  .version  AGENTS.md  ANNOUNCE  ANNOUNCE-0.1  ANNOUNCE-1.2  AUTHORS  AUTHORS.text  AUTHORS.txt  BUGS  CHANGES  CODE_OF_CONDUCT.md  COPYING  COPYING.DOCUMENTATION  COPYING.FDL  ChangeLog  DEDICATION  Doxyfile  FAQ.txt  GNUmakefile  GNUmakefile.in  Generate.make  HACKING  INSTALL  INSTALL.text  INSTALL.txt  Initial.make  LICENSE  LICENSE.DOCUMENTATION  LICENSE.OFL  Make.variables  Makefile  (+184 more)
Documentation/: AUTHORS.pod  BLURB.in  COPERTINA.in  COPERTINA.yo  COPYRIGHT  CodingStyle  CodingStyle.pod  CodingStyle.texi  CodingStyle.yo  FLAPTEKST.in  FLAPTEKST.yo  GNUmakefile  HOWTO.index  INSTALL.pod  Localisation.texi  MANIFESTO.pod  MANIFESTO.texi  MANIFESTO.yo  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  PATCHES.pod  README-W32.texi  README-W32.yo  README.pod  Rules.make  SConscript  TODO  TRANSLATION  Vocab-British  Vocab-French  Vocab-German  algorithms  application.tely  automake.urgh  automated-engraving.itexi  automated-engraving.texi  breaking  changes.tely  (+109 more)
Documentation/application/: converters.itely  install.itely  lilypond-book.itely  running.itely  setup.itely  suggestions.itely  updating.itely  working.itely
Documentation/automated-engraving/: GNUmakefile  benchmarking.itexi  conclusion.itexi  divide-and-conquer.itexi  engraving.itexi  formatting-architecture.itexi  implementing-notation.itexi  implementing-typography.itexi  index.itexi  input-format.itexi  introduction.itexi  introduction.texi  problem-statement.itexi  schubert.itexi  scoring-esthetics.itexi  software.itexi  typography-features.itexi
Documentation/bib/: colorado.bib  computer-notation.bib  engravingbib.bib  others-did.bib  we-wrote.bib
Documentation/bibliography/: GNUmakefile  SConscript  colorado.bib  computer-notation.bib  engraving.bib  html-long.bst  index.html.in
Documentation/ca/: GNUmakefile  essay.tely  extending.tely  learning.tely  macros.itexi  notation.tely  search-box.ihtml  snippets.tely  translations.itexi  usage.tely  web.texi
Documentation/contributor/: administration.itexi  basic-compile.itexi  build-notes.itexi  compile.itexi  compiling.itexi  doc-translation-list.itexi  doc-work.itexi  emmentaler-font.itexi  feta-font.itexi  git-starting.itexi  introduction.itexi  issues.itexi  lsr-work.itexi  programming-work.itexi  quick-start.itexi  regressions.itexi  (+4 more)
flower/: .version  AUTHORS  COPYING  ChangeLog  Flower-flags.make.in  GNUmakefile  INSTALL  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  NEWS  NEWS-1.0  NEWS-1.1.46  README  SConscript  Sources.make  TODO  VERSION  Variables.make  acconfig.h  aclocal.m4  assoc.hh  associter.hh  axis.cc  binary-source-file.cc  choleski.cc  choleski.hh  compare.hh  config.hh.in  configure  configure.in  cpu-timer.cc  cursor.cc  cursor.hh  cursor.inl  cursor.tcc  data-file.cc  dataf.cc  datafile.cc  (+116 more)
flowertest/: GNUmakefile  Makefile.am  Makefile.am.wild  Makefile.in  check.sh  flower-test.hh  mat-test.cc  pqtest.cc  rattest.cc  result  stringtest.cc
input/: GNUmakefile  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  Musique-de-Table.ly  SConscript  TODO  abbrev.ly  abc-raff.ly  allfontstyle.ly  bach-schenker.ly  baerenreiter-sarabande.ly  beam-bug.ly  beams.ly  book.ly  book.tex  cadenza.ly  cary-layout.ly  cary.ly  collisions.ly  coriolan-alto.ly  denneboom.ly  emacs-lily.fly  error.ly  example-1.fly  example-1.ly  example-2.fly  example-2.ly  example-3.ly  font-body.ly  font.ly  font13.ly  font16.ly  font20.ly  font26.ly  fugue1.ly  fugue1.midi.ly  gallina.ly  gallina.tex  (+89 more)
lib/: GNUmakefile  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  binary-source-file.cc  config.hh.in  duration-convert.cc  duration-iter.cc  duration.cc  file-storage.cc  includable-lexer.cc  input.cc  mapped-file-storage.cc  moment.cc  plet.cc  simple-file-storage.cc  source-file.cc  source.cc  template.cc  thank-you-cygnus.cc  warn.cc  windhoos-suck-suck-suck-thank-you-cygnus.cc
mf/: 00-lilypond-fonts.conf  00-lilypond-fonts.conf.in  99-lilypond-fonts.conf  99-lilypond-fonts.conf.in  GNUmakefile  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  README  README.md  Rules.make  SConscript  TODO  as-braces5.af  as-braces9.af  as-dummy1.af  as-number1.af  as-number4.af  as5.af  as9.af  autometric.mf  aybabtu.pe.in  bigcheese.pe.in  bolletjes.mf  cmbase.mf  cmbx12.afm.in  cmr.enc.in  cmr10.afm.in  cmr12.afm.in  cmr8.afm.in  cmti10.afm.in  common-modules-and-initialization.mf  debugging-settings.mf  declare-autometric-parameters.mf  dimen.tex  dyn.tex  dyn10.mf  ecb.mf  ecb10.mf  (+305 more)
mutopia/: GNUmakefile  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  TODO  claop.py  gallina.ly  gallina.tex  gnossienne-4.ly  los-toros-oboe-16.tex  los-toros-oboe-20.tex  los-toros-oboe.ly  ltor.ly  mutopia.make  standchen-16.ly  standchen-16.tex  standchen-20.ly  standchen-20.tex  standchen-easy.ly  standchen.ly  standje.ly
stepmake/: .cvsignore  AUTHORS.txt  CHANGES  GNUmakefile  GNUmakefile.in  INSTALL.texi  INSTALL.txt  NEWS  README  TODO  VERSION  aclocal.m4  aclocal.m4.orig  autogen.sh  config.hh.in  config.make.in  configure  configure.in
test/: GNUmakefile  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  VERSION  bow.cc  check-lily-midi.sh  check-lily-paper.sh  check-mi2mu.sh  hash.cc  int.cc  ok.ly  ok.midi  ok.tex
tex/: GNUmakefile  Makefile  Makefile.am  Makefile.am.wild  Makefile.in  SConscript  dimen.tex  dyn.tex  dyn10.tex  dyndefs.tex  eglerdefs.tex  feta11.tex  feta13.tex  feta16.tex  feta19.tex  feta20.tex  feta23.tex  feta26.tex  fetdefs.tex  font-en-tja16.tex  font-en-tja20.tex  headers.tex  latin1.enc  lily-debug.tex  lily-mf-defs.tex  lily-pdf-defs.tex  lily-ps-defs.tex  lilypond-latex.tex  lilypond-plaintex.tex  lilypond-tex-metrics.tex  lilypond.map.in  lilyponddefs.ps  lilyponddefs.tex  lm-ot1-map.tex  lm-ot1.tex  ltest.tex  mudela-book.tex  number.tex  p.tex  pedal.tex  (+20 more)
(+12882 files in other folders)
